Disable smart zoom for PDF viewer.

On Mac, the smart zoom gesture (double-tap with two fingers on Mac
trackpad) changes the page scale. This is undesirable because it scales
the viewer's controls off screen.

Now, in Browser::PreHandleGestureEvent, we drop the kGestureDoubleTap
event (which is created from NSEventTypeSmartMagnify) when we have a
full page plugin.

Bug: 676668
Change-Id: Ic523693ba6bed71460944d77a0a132a69ca737e3